plugins {
    id 'java'
    id 'application'
}

group = 'com.learning'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

application {
    mainClass = 'com.learning.concepts.App'
}

tasks.named('test') {
    useJUnitPlatform()
}

